# youtube-search-next

./: .gitignore  CLAUDE.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: automatic-testing.yml  python-publish.yml
tests/async/: extras.py
tests/sync/: extras.py
youtubesearchpython/core/: componenthandler.py  transcript.py
