[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-search-python"
version = "1.6.6"
description = "Search for YouTube videos, channels & playlists & get video information using link WITHOUT YouTube Data API v3"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Hitesh Kumar Saini", email = "saini123hitesh@gmail.com" }
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.14.2",
]

[project.urls]
Homepage = "https://github.com/alexmercerind/youtube-search-python"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
